Fix overflow layout

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   height: 29.7cm;
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
 }
 
 .button-row {
@@ -65,6 +66,7 @@ button:focus {
 .container-row {
   display: flex;
   flex-direction: row;
+  overflow-x: auto;
 }
 
 .sidecar {
